fixed alignment issue with menu and view cart
also converted px to either vh or vw

--- a/frontend/src/MenuPage.scss
+++ b/frontend/src/MenuPage.scss
@@ -4,8 +4,8 @@
 }
 
 .menu-container {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
 
 .info-container {
@@ -18,7 +18,7 @@
 }
 
 .view-cart-btn {
-    margin-right: 75px;
+    padding-right: 11vh;
 }
 
 .view-cart-btn:hover {
